--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 body { 
-    background-color: lightblue;
+font-family: Verdana, Helvetica, Arial, sans-serif;
+
+
+
+
+}
+h2{
+font-family: Verdana, Helvetica, Arial, sans-serif;
+color:#007e7e;
+}
+
+#garantie
+{
+margin-left: 100px;    
+font-family: Georgia, "Times New Roman", serif;
+font-style: italic;
+background-color:#a7cece ;
+padding:1cm ;
 }
